--- a/index.css
+++ b/index.css
@@ -11,3 +11,49 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+body {
+  margin: 30px;
+  background: rgb(15, 15, 15);
+  color: rgb(134, 254, 25);
+  text-shadow: 0 0 rgba(134, 254, 25, 0.5);
+  text-align: center;
+}
+
+.compass {
+  position: relative;
+  width: 260px;
+  height: 260px;
+  margin: 20px auto;
+  background: #222;
+  padding: 20px;
+  border-radius: 40px;
+  border: 5px solid #444;
+  overflow: hidden;
+}
+
+.compass .disc {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  z-index: 200;
+  width: 260px;
+  height: 260px;
+  background-size: 100%;
+}
+
+.compass .arrow {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  z-index: 1000;
+  width: 260px;
+  height: 260px;
+  background-size: 100%;
+}
