--- a/index.css
+++ b/index.css
@@ -1,10 +1,5 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
@@ -26,7 +21,7 @@ body {
   text-align: center;
 }
 
-.compass {
+.diagram {
   position: relative;
   width: 260px;
   height: 260px;
@@ -38,7 +33,7 @@ body {
   overflow: hidden;
 }
 
-.compass .disc {
+.diagram .disc {
   position: absolute;
   top: 20px;
   left: 20px;
@@ -48,7 +43,7 @@ body {
   background-size: 100%;
 }
 
-.compass .arrow {
+.diagram .arrow {
   position: absolute;
   top: 20px;
   left: 20px;
